[package]
name = "reinforcex"
version = "0.0.3"
edition = "2021"
description = "Deep Reinforcement Learning Framework"
license = "MIT"
repository = "https://github.com/kakky-hacker/reinforcex"
readme = "README.md"
keywords = ["rust", "drl"]
categories = ["algorithms"]
exclude = ["src/examples", "src/main.rs"]
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.11"

[dependencies]
rand = "0.8"
tch = {version="0.18.0"}
torch-sys = {version="0.18.0", features=["download-libtorch"]}
ndarray = "0.15"
rayon = "1.8"
ulid = "1"
gym = { git = "https://github.com/kakky-hacker/gym-rs.git", branch = "master", version="2.2.1", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true}
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

[features]
default = []
dev = ["gym", "reqwest", "serde", "serde_json"]